# Defect-detection-in-tunnels-using-360-degree-video-stitching-based-on-ELF2-rk3588

./: README.md
Video_Splicing_defect_detecting/stiii/: stiii.sln
Video_Splicing_defect_detecting/stiii/stiii/: frame_stit_queue.cpp  stiii.vcxproj.filters  test.cpp  worker.cpp  worker.h
Video_Splicing_defect_detecting/stiii/stiii/x64/Debug/: stiii.exe.recipe  vc143.idb
Video_Splicing_defect_detecting/stiii/stiii/x64/Debug/stiii.tlog/: CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.write.1.tlog
Video_Splicing_defect_detecting/yolo_inference/: CMakeLists.txt  thread.cpp  yolo_wrapper.h
Video_Splicing_defect_detecting/yolo_inference/include_create/: dma_queue.cpp  dma_queue.h  worker.cpp  worker.h  yolov8-pose.cc  yolov8-pose.h
Video_Splicing_defect_detecting/yolo_inference/include_yolo/: postprocess.cc  postprocess.h
Video_Splicing_defect_detecting/yolo_inference/until/: image_utils.c
stiii/stiii/: frame_queue.cpp  frame_queue.h  frame_stit_queue.h  stiii.vcxproj
stiii/stiii/x64/Debug/: test.obj.enc
stiii/stiii/x64/Debug/stiii.tlog/: CL.command.1.tlog  CL.read.1.tlog  link.read.1.tlog  link.secondary.1.tlog  stiii.lastbuildstate
